--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -9,24 +9,16 @@
       name="description"
       content="refine | Build your React-based CRUD applications, without constraints."
     />
-    <meta
-      data-rh="true"
-      property="og:image"
-      content="https://refine.dev/img/refine_social.png"
-    />
-    <meta
-      data-rh="true"
-      name="twitter:image"
-      content="https://refine.dev/img/refine_social.png"
-    />
-    <title>
-      Refine - Build your React-based CRUD applications, without constraints.
-    </title>
+    <meta data-rh="true" property="og:image" content="https://refine.dev/img/refine_social.png" />
+    <meta data-rh="true" name="twitter:image" content="https://refine.dev/img/refine_social.png" />
+
+    <title>Refine - Build your React-based CRUD applications, without constraints.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -37,5 +29,6 @@
       To begin the development, run `npm dev` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
   </body>
 </html>
