--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta data-rh="true" property="og:image" content="https://refine.dev/img/refine_social.png" />
     <meta data-rh="true" name="twitter:image" content="https://refine.dev/img/refine_social.png" />
 
-    <title>Refine - Build your React-based CRUD applications, without constraints.</title>
+    <title>Cedefi MS</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -29,6 +29,5 @@
       To begin the development, run `npm dev` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-
   </body>
 </html>
